tests/machine/x/ocaml/list_set_ops.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/list_set_ops.ml", line 38, characters 26-31:
38 |   print_endline (__show (([1;2] union [2;3])));
                               ^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.


Context (around line 38):
  36 | 
  37 | let () =
  38 |   print_endline (__show (([1;2] union [2;3])));
  39 |   print_endline (__show (([1;2;3] except [2])));
  40 |   print_endline (__show (([1;2;3] intersect [2;4])));
